assets/css/style.css
*,
*::before,
*::after {
    -webkit-box-sizing: inherit;
    box-sizing: inherit;
}

html {
    font-size: 100%;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

.hidden {
    display: none;
}

body {
    margin: 0;
    padding: 0;
    font-family: "PT Sans Narrow", sans-serif;
    font-size: 18px;
    font-weight: 300;
    color: #6c6c72;
    line-height: 1.3;
}

h1,
h2,
h3 {
    margin-top: 0px;
    font-weight: 300;
    line-height: 1.15;
    color: #2d314d;
}

h1 {
    font-size: 37px;
    margin-bottom: 24px;
}

h2 {
    font-size: 30px;
    margin-bottom: 25px;
}

p {
    line-height: 24px;
    margin: 10px;
}

a,
a:visited,
a:hover {
    text-decoration: none;
    color: #6c6c72;
}

.container {
    max-width: 1440px;
    margin: 0 auto;
}

.title {
    margin-top: 50px;
    background-color: #adadb9;
}

.no-bullets {
    list-style: none;
}

.menu {
    position: fixed;
    z-index: 10;
    width: 200px;
    height: 100vh;
    top: 0;
    left: -200px;
    transition: all 300ms ease-in-out;
    background-color: #adadb9;
}

.menu .menu__nav ul {
    position: relative;
    margin: 50px 0 0 20px;
    display: flex;
    flex-direction: column;
}

.menu:hover {
    left: 0px;
}

.menu:hover .menu__hamburger {
    opacity: 0;
}

.menu__hamburger {
    position: absolute;
    top: 20px;
    right: -80px;
    width: 70px;
    height: 35px;
    transition: all 300ms ease-in-out;
}

.menu__hamburger:hover {
    right: 0;
    opacity: 0;
}

.menu .menu__nav ul a {
    transition: all 300ms ease-in-out;
}

.menu .menu__nav ul a:hover {
    color: rgba(0, 0, 0, 0.8);
}

.menu__hamburger > span {
    display: block;
    width: 25px;
    height: 5px;
    background-color: black;
}

.menu__hamburger > span:not(:last-child) {
    margin-bottom: 5px;
}

.header__nav > ul {
    display: flex;
    justify-content: space-between;
    list-style: none;
    flex-wrap: wrap;
    margin: 0 0 50px 0;
}

.header__nav-item {
    display: block;
    padding: 20px 10px;
    transition: all 300ms ease-in-out;
}

.header__nav-item:hover {
    color: aliceblue;
    background-color: #adadb9;
    border-radius: 5px;
}

.hero {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

.hero > img {
    border: 5px solid rgb(75, 71, 71);
    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5);
}

.contacts {
    display: flex;
    flex-direction: column;
}

.contacts__item::before {
    content: "";
    display: inline-block;
    width: 15px;
    height: 15px;
    background-color: blue;
}

.summary {
    display: flex;
    flex-direction: column;
}

.summary__description {
    padding-left: 40px;
}

.skills__item::before {
    content: "";
    display: inline-block;
    width: 15px;
    height: 15px;
    background-color: blue;
}

.code {
    display: flex;
    flex-direction: column;
}

.education {
    display: flex;
    flex-direction: column;
}

.education__item::before {
    content: "";
    display: inline-block;
    width: 15px;
    height: 15px;
    background-color: blue;
}

.languages {
    display: flex;
    flex-direction: column;
}

.languages__item::before {
    content: "";
    display: inline-block;
    width: 15px;
    height: 15px;
    background-color: blue;
}

.footer {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    color: aliceblue;
    background-color: #73737a;
}

.footer a {
    color: aliceblue;
    transition: all 300ms ease-in-out;
}

.footer a:hover {
    color: black;
}

